0.4.17/_sources/gallery/paint-nd.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/paint-nd.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_paint-nd.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_paint-nd.py:


Paint nD
========

Display a 4D labels layer and paint only in 3D.

This is useful e.g. when proofreading segmentations within a time series.

.. tags:: analysis

.. GENERATED FROM PYTHON SOURCE LINES 11-35



.. image-sg:: /gallery/images/sphx_glr_paint-nd_001.png
   :alt: paint nd
   :srcset: /gallery/images/sphx_glr_paint-nd_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np
    from skimage import data
    import napari


    blobs = np.stack(
        [
            data.binary_blobs(
                length=128, blob_size_fraction=0.05, n_dim=3, volume_fraction=f
            )
            for f in np.linspace(0.05, 0.5, 10)
        ],
        axis=0,
    )
    viewer = napari.view_image(blobs.astype(float), rendering='attenuated_mip')
    labels = viewer.add_labels(np.zeros_like(blobs, dtype=np.int32))
    labels.n_edit_dimensions = 3
    labels.brush_size = 15
    labels.mode = 'paint'
    labels.n_dimensional = True

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_paint-nd.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: paint-nd.py <paint-nd.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: paint-nd.ipynb <paint-nd.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
